--- a/index/index.html
+++ b/index/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>penokumaLOG</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -12,10 +13,10 @@
 		<nav class="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="a.html">Blog</a></li>
-				<li><a href="acess.html">Achv</a></li>
-				<li><a href="menu.html"></a>Env</li>
-				<li><a href="contact.html">etc...</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="achv.html">Achv</a></li>
+				<li><a href="env.html">Env</a></li>
+				<li><a href="etc.html">etc...</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -27,7 +28,11 @@
 	<main>
 		<h2>News</h2>
 		<p class="news-item">5/25  🎉penokumaLOG 新規開設!!!!🎉</p>
-		<p classs="news-item">5月29日(月)の科学技術英語の単語テスト用に<a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">Google Form 数学英語s</a>を作成しました。ご活用ください～</p>
+		<p classs="news-item">5月29日(月)の科学技術英語の単語テスト用にGoogle Formを作成しました。ご活用ください～</p>
+		<tr>
+			<td><a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a></td>
+			<td><a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a></td>
+		</tr>
 	</main>
 	<footer class="footer">
 		<p>&copy;Copyright penokuma. All rights reserved.</p>
