--- a/index/index.html
+++ b/index/index.html
@@ -35,7 +35,7 @@
 		</tr>
 	</main>
 	<footer class="footer">
-		<p>&copy;Copyright penokuma. All rights reserved.</p>
+		<p>&2022copy;Copyright penokuma. All rights reserved.</p>
 	</footer>
 </div>
 </body>
