--- a/index/index.html
+++ b/index/index.html
@@ -29,7 +29,7 @@
 		<h2>Introduction</h2>
 		
 		<h3>News</h3>
-		<a href "news.html"></a>
+		<a href="news.html"></a>
 		
 	</main>
 	<footer class="footer">
