--- a/index/env.html
+++ b/index/env.html
@@ -23,20 +23,18 @@
 	<!-- ヘッダーここまで -->
 	<!-- メイン -->
 	<div calss="keyvisual">
-		<img src="images/keyvisual.jpg" alt="">
+		<img src="images/keyvisual.jpg" alt="penokumaのicon">
 	</div>
 	<main>
-		<h2>News</h2>
-		<p class="news-item">5/25  🎉penokumaLOG 新規開設!!!!🎉</p>
-		<p classs="news-item">5月29日(月)の科学技術英語の単語テスト用にGoogle Formを作成しました。ご活用ください～</p>
-		<tr>
-			<td><a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a></td>
-			<td><a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a></td>
-		</tr>
+		<img src="imges" alt="作業環境">
+		<h2>引っ越し中......></h2>
 	</main>
+	<!-- メインここまで -->
+	<!-- フッター -->
 	<footer class="footer">
 		<p>&2022copy;Copyright penokuma. All rights reserved.</p>
 	</footer>
+	<!-- フッターここまで -->
 </div>
 </body>
 </html>
