--- a/index/index.html
+++ b/index/index.html
@@ -27,10 +27,17 @@
 	</div>
 	<main>
 		<h2>Introduction</h2>
-		
-		<h3>News</h3>
-		<a href="news.html"></a>
-		
+		<div class="introduction">
+			<iframe src="intro.html">
+			</iframe>
+		</div>
+		<div class="news">
+			<h3>News</h3>
+			<iframe src="news.html"
+				width="400px"
+				height="500px">
+			</iframe>
+		</div>
 	</main>
 	<footer class="footer">
 		<p>&2022copy;Copyright penokuma. All rights reserved.</p>
