--- a/index/etc.html
+++ b/index/etc.html
@@ -1,41 +1,52 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>penokumaLOG</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="wrapper">
-	<!-- ヘッダー -->
-	<header class="header">
-		<h1 class="logo"><a href="index.html">penokumaログ</a></h1>
-		<nav class="nav">
-			<ul>
-				<li><a href="index.html" class="btntext"><span>Home</span></a></li>
-				<li><a href="blog.html" class="btntext"><span>&nbsp;Blog&nbsp;</span></a></li>
-				<li><a href="achv.html" class="btntext"><span>&thinsp;Achv&thinsp;</span></a></li>
-				<li><a href="env.html" class="btntext"><span>&nbsp;&nbsp;Env&nbsp;&nbsp;</span></a></li>
-				<li><a href="etc.html" class="btntext"><span>&nbsp;etc... </span></a></li>
-			</ul>
-		</nav>
-	</header>
+	<head>
+		<meta charset="UTF-8">
+		<html lang="ja">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		
+		<table>
+			<tr><title>Penokumaログ</title></tr>
+			
+		</table>
+		<link rel="stylesheet" href="style.css">
+		<link href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet">
+	</head>
+		<body>
+		<div class="wrapper">
+			<!-- ヘッダー -->
+			<header class="header">
+				<div class="rtime">
+					<script type="text/javascript">
+						var d=new Date();
+						document.write(d.toLocaleString());
+						</script>
+				</div>
+				<h1 class="logo"><a href="index.html" style="text-decoration:none; color:#708090; margin-left:170px" >Penokumaログ</a></h1>
+				<nav class="nav" flex-shrink:1;>
+					<ul>
+						<li><a href="index.html" class="btntext"><span>Home</span></a></li>
+						<li><a href="blog.html" class="btntext"><span>&nbsp;Blog&nbsp;</span></a></li>
+						<li><a href="achv.html" class="btntext"><span>&thinsp;Achv&thinsp;</span></a></li>
+						<li><a href="env.html" class="btntext"><span>&nbsp;&nbsp;Env&nbsp;&nbsp;</span></a></li>
+						<li><a href="etc.html" class="btntext"><span>&nbsp;etc... </span></a></li>
+					</ul>
+				</nav>
+			</header>
 	<!-- ヘッダーここまで -->
 	<!-- メイン -->
 	<div calss="keyvisual">
 		<img src="images/keyvisual.jpg" alt="">
 	</div>
 	<main>
-		<h2>News</h2>
-		<p class="news-item">5/25  🎉penokumaLOG 新規開設!!!!🎉</p>
-		<p classs="news-item">5月29日(月)の科学技術英語の単語テスト用にGoogle Formを作成しました。ご活用ください～</p>
-		<tr>
-			<td><a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a></td>
-			<td><a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a></td>
-		</tr>
+		<h2>ETC</h2>
+		<!--タグはここから-->
+		<table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><img src="http://www.rays-counter.com/d513_f6_263/6304f8c8ce632/" alt="" border="0"></a></td></tr><tr><td align="center"></td></tr></table>
+		<!--ここまで-->
+	
 	</main>
 	<footer class="footer">
-		<p>&2022copy;Copyright penokuma. All rights reserved.</p>
+		<p1>&copy; 2022 Copyright penokuma. All rights reserved.</p1>
 	</footer>
 </div>
 </body>
