--- a/index/intro.html
+++ b/index/intro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ja">
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 	</table>
 	<div class="who">
 		<div align=left>
-			<p><i class="fa-solid fa-comment-dots faa-wrench animated-hover"></i>  サボり系真面目人間でふ</p>
+			<p><i class="fa-solid fa-comment-dots faa-wrench animated-hover"></i>&nbsp;<script type="text/javascript" src="coment.js"></script></p>
 				<p><i class="fa-solid fa-location-dot faa-vertical animated-hover"></i>     都内の住宅地(NOT田舎)</p>
 				<p><i class="fa-solid fa-school faa-tada animated-hover"></i>  TU ICT 2年</p>
 				<p><i class="fa fa-cake-candles faa-bounce animated-hover"></i>  2002/7/10</p>
