--- a/index/lecture copy.html
+++ b/index/lecture copy.html
@@ -4,8 +4,6 @@
 		<meta charset="UTF-8">
 		<html lang="ja">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<script src="timer.js">
-		</script>
 		<table>
 			<tr><title>Penokumaログ</title></tr>
 			
@@ -40,8 +38,20 @@
 		<img src="images/keyvisual.jpg" alt="">
 	</div>
 	<main>
-		<h2>Achievements</h2>
-		<p id="Realtime"></p>
+		<h2>履修の記録</h2>
+		<div class="container">
+            目次を作ろう
+        </div>
+        <div class="container">
+            2年生~春~
+            <br><br>
+            ・
+        </div>
+        <div class="container">
+            2年生~秋~
+            <br><br>
+            ・
+        </div>
 	</main>
 	<footer class="footer">
 		<p>
