--- a/index/blog.html
+++ b/index/blog.html
@@ -1,37 +1,99 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>penokumaLOG</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet">
-</head>
-<body>
-<div class="wrapper">
-	<!-- ヘッダー -->
-	<header class="header">
-		<h1 class="logo"><a href="index.html">penokumaログ</a></h1>
-		<nav class="nav">
-			<ul>
-				<li><a href="index.html" class="btntext"><span>Home</span></a></li>
-				<li><a href="blog.html" class="btntext"><span>&nbsp;Blog&nbsp;</span></a></li>
-				<li><a href="achv.html" class="btntext"><span>&thinsp;Achv&thinsp;</span></a></li>
-				<li><a href="env.html" class="btntext"><span>&nbsp;&nbsp;Env&nbsp;&nbsp;</span></a></li>
-				<li><a href="etc.html" class="btntext"><span>&nbsp;etc... </span></a></li>
-			</ul>
-		</nav>
-	</header>
+	<head>
+		<meta charset="UTF-8">
+		<html lang="ja">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<table>
+			<tr><title>Penokumaログ</title></tr>
+			
+		</table>
+		<link rel="stylesheet" href="style.css">
+		<link href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet">
+		</head>
+		<body>
+		<div class="wrapper">
+			<!-- ヘッダー -->
+			<header class="header">
+				<div class="rtime">
+					<script type="text/javascript">
+					var d=new Date();
+					document.write(d.toLocaleString());
+					</script>
+				</div>
+				<h1 class="logo"><a href="index.html" style="text-decoration:none; color:#708090; margin-left:170px" >Penokumaログ</a></h1>
+				<nav class="nav" flex-shrink:1;>
+					<ul>
+						<li><a href="index.html" class="btntext"><span>Home</span></a></li>
+						<li><a href="blog.html" class="btntext"><span>&nbsp;Blog&nbsp;</span></a></li>
+						<li><a href="achv.html" class="btntext"><span>&thinsp;Achv&thinsp;</span></a></li>
+						<li><a href="env.html" class="btntext"><span>&nbsp;&nbsp;Env&nbsp;&nbsp;</span></a></li>
+						<li><a href="etc.html" class="btntext"><span>&nbsp;etc... </span></a></li>
+					</ul>
+				</nav>
+			</header>
 	<!-- ヘッダーここまで -->
 	<!-- メイン -->
 	<div calss="keyvisual">
 		<img src="images/keyvisual.jpg" alt="">
 	</div>
 	<main>
-		
+		<h2>Blog</h2>
+		<a href="lecture.html" style="text-decoration:none;">
+			<div class="container_Achi">
+					<h0>履修の記録</h0>
+					<br>
+					<h0>最終更新日
+						<time id="modify">
+						</time>
+						<script>
+						/* 更新日の取得 */
+						const last = new Date(document.lastModified);
+						const year = last.getFullYear();
+						const month = last.getMonth() + 1;
+						const date = last.getDate();
+						/* 日付を書き換える */
+						const target = document.getElementById('modify');
+						target.textContent = year + '-' + month + '-' + date;
+						</script>
+					</h0>
+			</div>
+		</a>
+		<!--   <a href="lecture copy.html" style="text-decoration:none;"></a>   -->
+			<div class="container_Achi">
+				
+					<h0>🎉penokumaLOG初開設🎉</h0>
+					<br>
+					<h0>最終更新日
+						2022-5-25
+						<!--
+							<time id="modify"></time>
+							<script>
+							/* 更新日の取得 */
+							const last = new Date(document.lastModified);
+							const year = last.getFullYear();
+							const month = last.getMonth() + 1;
+							const date = last.getDate();
+							/* 日付を書き換える */
+							const target = document.getElementById('modify');
+							target.textContent = year + '-' + month + '-' + date;
+							</script>
+							<br>
+						-->
+					</h0>
+					<!--
+					<tr>
+						<a href="https://forms.gle/qKtBrmk9xY7nHX1b7" target="_blank">数学英語s</a>
+					</tr>
+					-->
+				
+			</div>	
 	</main>
 	<footer class="footer">
-		<p>&2022copy;Copyright penokuma. All rights reserved.</p>
+		<p>
+			<div class="white"><img src="http://www.rays-counter.com/d513_f6_263/6304f8c8ce632/" alt="アクセスカウンター" border="0"></div>
+		</p>
+		<p1>&copy; 2022 Copyright penokuma. All rights reserved.</p1>
 	</footer>
 </div>
 </body>
