--- a/index/index.html
+++ b/index/index.html
@@ -1,27 +1,37 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>penokumaLOG</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet">
-</head>
-<body>
-<div class="wrapper">
-	<!-- ヘッダー -->
-	<header class="header">
-		<h1 class="logo"><a href="index.html">penokumaログ</a></h1>
-		<nav class="nav" flex-shrink:1;>
-			<ul>
-				<li><a href="index.html" class="btntext"><span>Home</span></a></li>
-				<li><a href="blog.html" class="btntext"><span>&nbsp;Blog&nbsp;</span></a></li>
-				<li><a href="achv.html" class="btntext"><span>&thinsp;Achv&thinsp;</span></a></li>
-				<li><a href="env.html" class="btntext"><span>&nbsp;&nbsp;Env&nbsp;&nbsp;</span></a></li>
-				<li><a href="etc.html" class="btntext"><span>&nbsp;etc... </span></a></li>
-			</ul>
-		</nav>
-	</header>
+	<head>
+		<meta charset="UTF-8">
+		<html lang="ja">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<table>
+			<tr><title>Penokumaログ</title></tr>
+			
+		</table>
+		<link rel="stylesheet" href="style.css">
+		<link href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet">
+		</head>
+		<body>
+		<div class="wrapper">
+			<!-- ヘッダー -->
+			<header class="header">
+				<div class="rtime">
+					<script type="text/javascript">
+					var d=new Date();
+					document.write(d.toLocaleString());
+					</script>
+				</div>
+				<h1 class="logo"><a href="index.html" style="text-decoration:none; color:#708090; margin-left:170px" >Penokumaログ</a></h1>
+				<nav class="nav" flex-shrink:1;>
+					<ul>
+						<li><a href="index.html" class="btntext"><span>Home</span></a></li>
+						<li><a href="blog.html" class="btntext"><span>&nbsp;Blog&nbsp;</span></a></li>
+						<li><a href="achv.html" class="btntext"><span>&thinsp;Achv&thinsp;</span></a></li>
+						<li><a href="env.html" class="btntext"><span>&nbsp;&nbsp;Env&nbsp;&nbsp;</span></a></li>
+						<li><a href="etc.html" class="btntext"><span>&nbsp;etc... </span></a></li>
+					</ul>
+				</nav>
+			</header>
 	<!-- ヘッダーここまで -->
 	<!-- メイン -->
 	<div calss="keyvisual">
@@ -33,10 +43,9 @@
 				<object data="intro.html"
 					type="text/plain"
 					width="100%"
-					height="100%">
+					height="110%">
 				</object>
-				<script src="intro.js">
-				</script>
+				
 		       	</div>
 			<div class="news">
 				<iframe src="news.html"
@@ -48,8 +57,13 @@
 	
 	</main>
 	<footer class="footer">
-		<p>&2022copy;Copyright penokuma. All rights reserved.</p>
+		<!--タグはここから-->
+		<p>
+		<div class="white"><img src="http://www.rays-counter.com/d513_f6_263/6304f8c8ce632/" alt="アクセスカウンター" border="0"></div>
+		</p>
+		<!--ここまで-->
+		<p1>&copy; 2022 Copyright penokuma. All rights reserved.</p1>
 	</footer>
-</div>
-</body>
+	</div>
+	</body>
 </html>
