--- a/index/index.html
+++ b/index/index.html
@@ -15,6 +15,13 @@
 		<div class="wrapper">
 			<!-- ヘッダー -->
 			<header class="header">
+				<meta name="twitter:card" content="summary_large_image" />
+				<meta name="twitter:site" content="@penokuma" />
+				<meta name="twitter:title" content="「Penokumaログ」" />
+				<!--  サブ説明
+				<meta name="twitter:description" content="" />
+				-->
+				<meta name="twitter:image" content="https://penokuma-log-mauve.vercel.app/images/HP_top.png" />
 				<div class="rtime">
 					<script type="text/javascript">
 					var d=new Date();
